    [ticket:2367]

  - [bug] Fixed bug whereby hybrid_property didn't 
    work as a kw arg in any(), has().

  - [feature] Added "class_registry" argument to
    declarative_base().  Allows two or more declarative
    bases to share the same registry of class names.

  - [feature] query.filter() accepts multiple 
    criteria which will join via AND, i.e.
    query.filter(x==y, z>q, ...)

- sqlite
  - [bug] the "name" of an FK constraint in SQLite
    is reflected as "None", not "0" or other 
    integer value [ticket:2364].
    SQLite does not appear to support constraint
    naming in any case.

- Py3K
  - [bug] Fixed inappropriate usage of util.py3k
    flag and renamed it to util.py3k_warning, since 
    this flag is intended to detect the -3 flag
    series of import restrictions only.
    [ticket:2348]

0.7.4
=====
- orm
  - [bug] Fixed backref behavior when "popping" the 
    value off of a many-to-one in response to 
    a removal from a stale one-to-many - the operation
    is skipped, since the many-to-one has since
    been updated.  [ticket:2315]

  - [bug] After some years of not doing this, added
    more granularity to the "is X a parent of Y" 
    functionality, which is used when determining
    if the FK on "Y" needs to be "nulled out" as well
    as if "Y" should be deleted with delete-orphan
    cascade.   The test now takes into account the
    Python identity of the parent as well its identity 
    key, to see if the last known parent of Y is
    definitely X.   If a decision
    can't be made, a StaleDataError is raised.  The
    conditions where this error is raised are fairly
    rare, requiring that the previous parent was
    garbage collected, and previously
    could very well inappropriately update/delete
    a record that's since moved onto a new parent,
    though there may be some cases where 
    "silent success" occurred previously that will now 
    raise in the face of ambiguity.